<resources>
    <string name="app_name">Hello World</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="action_settings">Settings</string>
    <string name="setting">设置</string>
    <string name="home">主页</string>
    <string name="about">关于</string>
    <string name="collect">收藏</string>
    <string name="recommend">推荐</string>
    <string name="title_activity_register_and_login">账号管理</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="findPassWord">找回密码</string>
    <string name="title_activity_edit">发表心情</string>
    <string name="complete">完成</string>
    <string name="ic">头像</string>
    <string name="man">男</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="tour">游客</string>
    <string name="autograph">个性签名</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cahce">清除缓存</string>
    <string name="title_activity_edit_user_message">EditUserMessageActivity</string>
    <string name="choice_albun">相册选取</string>
    <string name="choice_camera">相机选取</string>
</resources>
