<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="madan.com.test.project.ui.RegisterAndLoginActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/mLoginMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:layout_marginLeft="30dp"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/bg"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <TextView
        android:layout_toRightOf="@+id/mLoginMenu"
        android:id="@+id/mRegisterMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:layout_marginLeft="30dp"
        android:text="@string/register"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />


    <TextView
        android:layout_toRightOf="@+id/mRegisterMenu"
        android:id="@+id/mFindPassWordMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:layout_marginLeft="30dp"
        android:text="@string/findPassWord"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <View
        android:id="@+id/diviver"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/mRegisterMenu"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/bg" />

<android.support.design.widget.TextInputLayout
    android:id="@+id/mUerNameInputLayout"
    android:layout_width="wrap_content"
    android:layout_below="@+id/diviver"
    android:layout_alignLeft="@+id/diviver"
    android:layout_alignRight="@+id/diviver"
    android:layout_marginTop="25dp"
    android:hint="请输入账户名"

    android:layout_height="60dp">
<EditText
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/mPassWordInputLayout"
        android:layout_width="wrap_content"
        android:layout_below="@+id/mUerNameInputLayout"
        android:layout_alignLeft="@+id/diviver"
        android:layout_alignRight="@+id/diviver"
        android:hint="请输入密码"
        android:layout_height="60dp">
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/mMeilInputLayout"
        android:layout_width="wrap_content"
        android:layout_below="@+id/mPassWordInputLayout"
        android:layout_alignLeft="@+id/diviver"
        android:layout_alignRight="@+id/diviver"
        android:visibility="gone"
        android:hint="请输入邮箱"
        android:layout_height="60dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/mRegisterBtn"
        android:layout_below="@+id/mMeilInputLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:text="登录"
        android:textSize="@dimen/text_small"
        android:textColor="@color/white"
        android:background="@drawable/select_logout"
        android:layout_alignLeft="@+id/diviver"
        android:layout_alignRight="@+id/diviver"
        android:layout_height="wrap_content" />

</RelativeLayout>
